--- a/setup.cfg
+++ b/setup.cfg
@@ -31,9 +31,11 @@ project_urls =
 [options]
 packages = find:
 install_requires =
-    numpy
-    magicgui
+    pandas
+    pyarrow
     qtpy
+    scikit-image
+    
 
 python_requires = >=3.8
 include_package_data = True
