--- a/setup.cfg
+++ b/setup.cfg
@@ -31,10 +31,13 @@ project_urls =
 [options]
 packages = find:
 install_requires =
+    numpy
     pandas
     pyarrow
     qtpy
     scikit-image
+    tifffile
+    trackpy
     
 
 python_requires = >=3.8
